k8s/dev/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nossagrana-dev-web
  namespace: nossagrana-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nossagrana-dev-web
  template:
    metadata:
      labels:
        app: nossagrana-dev-web
    spec:
      containers:
        - name: nossagrana-dev-web
          image: ghcr.io/leoferolive/nossagrana-dev-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
