k8s/dev/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nossagrana-dev-api
  namespace: nossagrana-dev
spec:
  selector:
    app: nossagrana-dev-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
