k8s/dev/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nossagrana-dev-web
  namespace: nossagrana-dev
spec:
  selector:
    app: nossagrana-dev-web
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
