k8s/dev/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nossagrana-dev-web
  namespace: nossagrana-dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: dev-app.nossagrana.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nossagrana-dev-web
                port:
                  number: 80
